# 3d-assistant

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  clippy.toml  docker-compose.yml  eslint.config.js  package.json  playwright.config.js  rustfmt.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
deployment/: .gitignore  README.md  docker-compose.observability.yml  docker-compose.prod.yml  otel-collector-config.yml  signoz-query-service-config.yml
docs/: ADR-005-postgresql-only.md  MCP.md  README.md  SECURITY_AUDIT.md  api.yaml
docs/adr/: 0001-authentification-cookie-session.md  0002-password-hashing-argon2.md  0003-mode-demo-visiteurs.md  0004-preparation-multi-tenant-v2.md
docs/api/: health-checks.md
docs/architecture/: README.md
docs/deployment/: README.md  configuration.md  docker-compose.md  security.md  troubleshooting.md  vps.md
docs/fr/: mcp.md
docs/reviews/: code_review_2025-12-23.md
docs/specs/: feature-0001-architecture-spec.md  feature-0001-code-review.md  feature-0001-gestion-comptes-multi-tenants.md  feature-0001-qa-report.md  feature-0001-security-audit.md  feature-0001-ux-guidelines.md  feature-0002-architecture-spec.md  feature-0002-code-review.md  feature-0002-cycle-vie-devis.md
e2e/: README.md  accessibility.spec.js  validation.spec.js
e2e/api/: admin.spec.js  materials.spec.js  quote.spec.js  sessions.spec.js
e2e/fixtures/: test_cube.3mf.xml
e2e/ui/: homepage.spec.js
specs/001-3d-print-quoting/: backlog.md  plan.md  spec.md  tasks.md
specs/001-3d-print-quoting/checklists/: requirements.md
specs/003-production-observability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-production-observability/checklists/: requirements.md
specs/003-production-observability/contracts/: health.yaml  telemetry.md
src/: config.rs  lib.rs  main.rs
src/api/: health.rs  mod.rs  routes.rs
src/api/handlers/: admin.rs  auth.rs  materials.rs  mod.rs  quote.rs  ssr.rs  upload.rs  user_quotes.rs
src/api/middleware/: auth.rs  error.rs  mod.rs  rate_limit.rs  sanitize.rs  security_headers.rs
src/business/: auth.rs  file_processor.rs  mod.rs  pricing.rs  session.rs  templates.rs
src/db/: mod.rs  schema.rs  seed.sql
src/db/migrations/: 001_service_types.sql  002_materials.sql  003_quote_sessions.sql  (+6 more)
src/integrations/: mod.rs
src/mcp/: mod.rs  quote_tools.rs  server.rs  types.rs
src/models/: material.rs  mod.rs  model.rs  quote.rs  service_type.rs  user.rs
src/observability/: logging.rs  metrics.rs  mod.rs  tracing.rs
src/persistence/: admin.rs  materials.rs  mod.rs  models.rs  quotes.rs  sessions.rs  user_sessions.rs  users.rs
src/services/: file_processor.rs  mod.rs  pricing.rs  session.rs  templates.rs
static/css/: accessibility.css  admin.css  main.css
static/js/: main.js
templates/: admin.html  base.html  index.html  login.html  my-quotes.html  quote-detail.html  register.html
tests/: mcp_integration_test.rs  mcp_integration_test.rs.disabled
tests/integration/: config_test.rs
(+18 files in other folders)
