[package]
name = "quote-service"
version = "0.1.0"
edition = "2021"
authors = ["3D Print Quote Service Team"]
description = "Backend service for 3D printing quote generation"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "json"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "json"] }

# File parsing
stl_io = "0.7"
zip = "0.6"
quick-xml = "0.31"

# Utilities
ulid = "1.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
rust_decimal = { version = "1.32", features = ["serde"] }
futures-util = "0.3"

# Templating (SSR)
tera = "1.19"
once_cell = "1.19"

# Cookie handling for SSR auth
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"

# Rate limiting
tower_governor = "0.4"
governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "quote-service"
path = "src/main.rs"
