[package]
name = "quote-service"
version = "0.1.0"
edition = "2024"
authors = ["3D Print Quote Service Team"]
description = "Backend service for 3D printing quote generation"

[dependencies]
# Web framework
axum = { version = "0.8.7", features = ["multipart", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs", "limit"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "json",
] }

# File parsing
stl_io = "0.10.0"
zip = "6.0.0"
quick-xml = "0.38.4"

# Utilities
ulid = "1.2.1"
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
rust_decimal = { version = "1.39.0", features = ["serde"] }
futures-util = "0.3.31"

# Templating (SSR)
tera = "1.20.1"
once_cell = "1.21.3"

# Cookie handling for SSR auth
axum-extra = { version = "0.12.2", features = ["cookie"] }
time = "0.3.44"

# Rate limiting
tower_governor = "0.8.0"
governor = "0.10.2"

# MCP (Model Context Protocol)
rmcp = { version = "0.9", features = ["server", "schemars", "transport-streamable-http-server"] }
schemars = "1.1"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.23.0"
reqwest = { version = "0.12.24", features = ["json"] }

[lib]
name = "quote_service"
path = "src/lib.rs"

[[bin]]
name = "quote-service"
path = "src/main.rs"
